feat: Toss 스타일 디자인 적용 및 copyright 연도 동적 처리

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
         <a href="#endpoints">API</a>
         <a href="#examples">예시</a>
     </div>
-    <p>© 2024 팡고링고. All rights reserved.</p>
+    <p>© <span id="current-year">{{ 'now' | date: '%Y' }}</span> 팡고링고. All rights reserved.</p>
 </footer>
 
