style: 토스페이먼츠 스타일로 재디자인 - 이모지 제거, Consolas 폰트, 각진 디자인

--- a/_includes/endpoints/approve.html
+++ b/_includes/endpoints/approve.html
@@ -81,7 +81,7 @@
             </div>
 
             <div class="info-box tip">
-                <div class="info-box-icon">💡</div>
+                <div class="info-box-icon">TIP</div>
                 <div class="info-box-content">
                     <p>승인 시 번역 완료된 번역본(<code>status: SUCCESS</code>)만 게시됩니다. 번역 진행 중이거나 실패한 번역본은 게시되지 않습니다.</p>
                 </div>
