--- a/_includes/endpoints/translate.html
+++ b/_includes/endpoints/translate.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="info-box warning">
-                <div class="info-box-icon">⚠️</div>
+                <div class="info-box-icon">!</div>
                 <div class="info-box-content">
                     <p>번역 요청은 <strong>비동기로 처리</strong>되며, 즉시 결과를 반환하지 않습니다. 번역 진행 상태는 <strong>번역 상태 조회 API</strong>를 통해 확인하세요.</p>
                 </div>
