fix: 가이드 수정

--- a/_includes/endpoints/approve.html
+++ b/_includes/endpoints/approve.html
@@ -74,7 +74,7 @@
                     </div>
                     <pre><code class="language-json">{
   "message": "기사가 성공적으로 승인되고 게시되었습니다.",
-  "articleId": 100,
+  "articleId": 1234567890,
   "publishedAt": "2024-01-01T00:00:00.000Z"
 }</code></pre>
                 </div>
