--- a/_includes/endpoints/get-translations.html
+++ b/_includes/endpoints/get-translations.html
@@ -39,7 +39,7 @@
                         </button>
                     </div>
                     <pre><code class="language-json">{
-  "articleId": 100,
+  "articleId": 1234567890,
   "translations": [
     {
       "region": "en-us",
