--- a/_includes/endpoints/translate.html
+++ b/_includes/endpoints/translate.html
@@ -81,7 +81,7 @@
                     </div>
                     <pre><code class="language-json">{
   "message": "번역 요청이 성공적으로 접수되었습니다.",
-  "articleId": 100,
+  "articleId": 1234567890,
   "targetRegions": ["en-us", "ja-jp"]
 }</code></pre>
                 </div>
