--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,18 @@
         <div class="sidebar-title">API 엔드포인트</div>
         <ul class="sidebar-nav">
             <li>
+                <a href="#get-users">
+                    <span class="nav-method get">GET</span>
+                    사용자 목록 조회
+                </a>
+            </li>
+            <li>
+                <a href="#get-categories">
+                    <span class="nav-method get">GET</span>
+                    카테고리 목록 조회
+                </a>
+            </li>
+            <li>
                 <a href="#create-article">
                     <span class="nav-method post">POST</span>
                     원문 기사 생성
