fix: 가이드 추가

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,6 +45,18 @@
                     기사 승인
                 </a>
             </li>
+            <li>
+                <a href="#update-article">
+                    <span class="nav-method put">PUT</span>
+                    기사 원본 수정
+                </a>
+            </li>
+            <li>
+                <a href="#cancel-publish">
+                    <span class="nav-method delete">DELETE</span>
+                    게시 취소
+                </a>
+            </li>
         </ul>
     </div>
     <div class="sidebar-section">
