--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,9 +16,21 @@
                 </a>
             </li>
             <li>
+                <a href="#create-user">
+                    <span class="nav-method post">POST</span>
+                    사용자 생성
+                </a>
+            </li>
+            <li>
                 <a href="#get-categories">
                     <span class="nav-method get">GET</span>
                     카테고리 목록 조회
+                </a>
+            </li>
+            <li>
+                <a href="#create-category">
+                    <span class="nav-method post">POST</span>
+                    카테고리 생성
                 </a>
             </li>
             <li>
@@ -37,6 +49,18 @@
                 <a href="#get-translations">
                     <span class="nav-method get">GET</span>
                     번역 상태 조회
+                </a>
+            </li>
+            <li>
+                <a href="#update-translation">
+                    <span class="nav-method put">PUT</span>
+                    번역본 수정
+                </a>
+            </li>
+            <li>
+                <a href="#delete-translation">
+                    <span class="nav-method delete">DELETE</span>
+                    번역본 삭제
                 </a>
             </li>
             <li>
