--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,6 +22,12 @@
                 </a>
             </li>
             <li>
+                <a href="#restore-user">
+                    <span class="nav-method post">POST</span>
+                    사용자 복구
+                </a>
+            </li>
+            <li>
                 <a href="#get-categories">
                     <span class="nav-method get">GET</span>
                     카테고리 목록 조회
