--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,12 @@
                 </a>
             </li>
             <li>
+                <a href="#update-user">
+                    <span class="nav-method patch">PATCH</span>
+                    사용자 정보 수정
+                </a>
+            </li>
+            <li>
                 <a href="#get-categories">
                     <span class="nav-method get">GET</span>
                     카테고리 목록 조회
@@ -46,9 +52,21 @@
                 </a>
             </li>
             <li>
+                <a href="#auto-translate">
+                    <span class="nav-method post">POST</span>
+                    텍스트 자동 번역
+                </a>
+            </li>
+            <li>
                 <a href="#translate-article">
                     <span class="nav-method post">POST</span>
                     번역 요청
+                </a>
+            </li>
+            <li>
+                <a href="#translate-enhance">
+                    <span class="nav-method post">POST</span>
+                    번역 요청 (Enhance)
                 </a>
             </li>
             <li>
